@@ -287,6 +287,29 @@ int SCIPgetNRootboundChgsRun(
    SCIP*                 scip                /**< Scip data structure */
    );
 
+/** gets number of global fixings applied in the current run
+ *
+ * @return number of global fixings
+ *
+ *  @pre This method can be called if SCIP is in one of the following stages:
+ *       - \ref SCIP_STAGE_PROBLEM
+ *       - \ref SCIP_STAGE_TRANSFORMING
+ *       - \ref SCIP_STAGE_TRANSFORMED
+ *       - \ref SCIP_STAGE_INITPRESOLVE
+ *       - \ref SCIP_STAGE_PRESOLVING
+ *       - \ref SCIP_STAGE_EXITPRESOLVE
+ *       - \ref SCIP_STAGE_PRESOLVED
+ *       - \ref SCIP_STAGE_INITSOLVE
+ *       - \ref SCIP_STAGE_SOLVING
+ *       - \ref SCIP_STAGE_SOLVED
+ *       - \ref SCIP_STAGE_EXITSOLVE
+ *       - \ref SCIP_STAGE_FREETRANS
+*/
+SCIP_EXPORT
+int SCIPgetNRootIntFixingsRun(
+   SCIP*                 scip                /**< Scip data structure */
+   );
+
 /** gets number of times a selected node was from a cut off subtree
  *
  *  @return number of times a selected node was from a cut off subtree
