@@ -52,6 +52,7 @@ Performance improvements
 - inline SCIPgetStatus() to reduce computational overhead
 - allow multi-aggregation of unbounded slack variables, which may enable more bound tightening due to a reduction in the number of unbounded variables
 - reduce maximal fraction of diving LP iterations relative to total node LP iterations
+- do not allow non-root restarts when no global fixings were found
 
 Examples and applications
 -------------------------
@@ -198,6 +199,7 @@ Interface changes
 - SCIPhashmapInsertLong() and SCIPhashmapGetImageLong()
 - SCIPvarGetMinAggrCoef() and SCIPvarGetMaxAggrCoef() to get bounds on absolute aggregation coefficients for a loose variable;
   SCIPisVarAggrCoefAcceptable() to check whether bounds on aggregation coefficients would exceed thresholds when using a loose variable in another aggregation
+- SCIPgetNRootIntFixings() to retrieve the number of integer fixings at the root node
 
 ### Changes in preprocessor macros
 
@@ -235,6 +237,8 @@ Interface changes
 - changed defaults of constraints/components/propfreq and constraints/components/maxdepth to -1 and 2147483647, respectively, to avoid unnecessary calls of components propagator by default
 - changed frequencies for the following heuristics: shifting, gins, crossover, rins, randrounding
 - set default maxlpiterquot to 0.05 for all LP diving heuristics and feaspump whereas adaptivediving uses 0.15 and rootsoldiving remains at 0.01
+- set default of presolving/restartminred to 0.05
+- set default of presolving/immrestartfac to 0.05
 
 ### New parameters
 
